--- a/index.html
+++ b/index.html
@@ -399,8 +399,9 @@
             update & news
           </p>
           <form action="#" method="get" class="letter__form">
-            <input class="letter__form-input" type="text" name="mail" value="" placeholder="Your email address">
-            <button class="letter__form-buttoт" type="submit"><img src="#" alt="бумажный самолётик"></button>
+            <label for="" class="letter__label"><input class="letter__input-text" type="text" name="mail" value="" placeholder="Your email address">
+            </label>
+            <button class="letter__button" type="submit"><img src="#" alt="бумажный самолётик"></button>
           </form>
         </div>
         <div class="copyright">
