--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h3 class="features__title">
               Full free chat
             </h3>
-            <p class="featuse__text">
+            <p class="features__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
             </p>
           </li>
@@ -121,7 +121,7 @@
             <h3 class="features__title">
               unlimiter features
             </h3>
-            <p class="featuse__text">
+            <p class="features__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
           </li>
@@ -149,7 +149,7 @@
             <h3 class="features__title">
               iso & androind version
             </h3>
-            <p class="featuse__text">
+            <p class="features__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
           </li>
@@ -161,7 +161,7 @@
             <h3 class="features__title">
               retina ready greaphics
             </h3>
-            <p class="featuse__text">
+            <p class="features__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
           </li>
@@ -173,7 +173,7 @@
             <h3 class="features__title">
               24/7 support by real pepole
             </h3>
-            <p class="featuse__text">
+            <p class="features__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
           </li>
@@ -248,6 +248,17 @@
        
       </div>
 
+    </section>
+    <section class="video">
+      <div class="video__wrapper">
+        <h2 class="video__title title">
+          how to use the app perfectly
+        </h2>
+        <p class="video__text text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
+        </p>
+        <video class="video__content" src="#"></video>
+      </div>
     </section>
     <section class="rewiev">
 
