--- a/index.html
+++ b/index.html
@@ -20,6 +20,38 @@
         <img class="logo__img" src="img/logo.jpg" alt="логотип компании">
       </a>
       <a href="#" class="header__download">DOWNLOAD</a>
+        <div class="header__box box">
+        <a href="mailto:info@youremail.com" class="box__link">
+          <img src="img/mail-fill.svg" alt="письмо" class="box__img">
+          <span class="box__text">info@youremail.com</span>
+        </a>
+        <a href="tel:(480) 555-0103" class="box__link">
+          <img src="img/phone-fill.svg" alt="телефон" class="box__img">
+          <span class="box__text">(480) 555-0103</span>
+        </a>
+        <ul class="social__list">
+          <li class="social__item social__item_border-none">
+            <a href="#" class="social__link">
+              <img src="img/social__facebook.svg" alt="facebook">
+            </a>
+          </li>
+          <li class="social__item  social__item_border-none">
+            <a href="#" class="social__link">
+              <img src="img/social__instagram.svg" alt="instagram">
+            </a>
+          </li>
+          <li class="social__item  social__item_border-none">
+            <a href="#" class="social__link">
+              <img src="img/social__twitter.svg" alt="twitter">
+            </a>
+          </li>
+          <li class="social__item  social__item_border-none">
+            <a href="#" class="social__link">
+              <img src="img/social__youtube.svg" alt="youtube">
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </header>
   <main class="main">
@@ -460,14 +492,20 @@
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link"><img src="img/social__instagram.svg"
-                alt="instagram"></a>
-              </li>
+            <a href="#" class="social__link">
+              <img src="img/social__instagram.svg" alt="instagram">
+            </a>
+          </li>
           <li class="social__item">
-            <a href="#" class="social__link"><img src="img/social__twitter.svg"
-                alt="twitter"></a></li>
-          <li class="social__item"><a href="#" class="social__link"><img src="img/social__youtube.svg"
-                alt="youtube"></a></li>
+            <a href="#" class="social__link">
+              <img src="img/social__twitter.svg" alt="twitter">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="#" class="social__link">
+              <img src="img/social__youtube.svg" alt="youtube">
+            </a>
+          </li>
         </ul>
       </div>
       <div class="footer__links links">
@@ -483,7 +521,7 @@
       </div>
       <div class="footer__news news">
         <h3 class="news__title">
-          news news
+          news letter
         </h3>
         <p class="news__text">
           Subscribe our newsnews to get our latest
