--- a/index.html
+++ b/index.html
@@ -16,11 +16,31 @@
         <!-- <img class="burger__img" src="#" alt="бургер меню"> -->
         <span></span>
       </button>
+      <nav class="header__nav nav">
+        <a href="" class="nav__item">
+          Home
+        </a>
+        <a href="" class="nav__item">
+          About
+        </a>
+        <a href="" class="nav__item">
+          Features
+        </a>
+      </nav>
       <a href="#" class="header__logo logo">
         <img class="logo__img" src="img/logo.jpg" alt="логотип компании">
       </a>
+      <nav class="header__nav nav">
+        <a href="" class="nav__item">
+          Screenshot
+        </a>
+        <a href="" class="nav__item">
+          Blog
+        </a>
+        <a href="#" class="nav__item nav__item_background">DOWNLOAD</a>
+      </nav>
       <a href="#" class="header__download">DOWNLOAD</a>
-        <div class="header__box box">
+      <div class="header__box box">
         <a href="mailto:info@youremail.com" class="box__link">
           <img src="img/mail-fill.svg" alt="письмо" class="box__img">
           <span class="box__text">info@youremail.com</span>
@@ -219,59 +239,60 @@
     <section class="main__app app">
 
       <div class="app__wrapper">
-        <h2 class="visually-hidden">About our app</h2>
-        <p class="app__title">
-          Download App Now
-        </p>
-        <p class="app__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae,
-          nullam
-          lobortis enim.
-        </p>
-        <div class="app__download download">
-          <a href="" class="download__link">
-            <img src="img/google__play--big.jpg" alt="кнопка для скачивания с Google Play">
-            <span class="visually-hidden">Download our app from Google Play</span>
-          </a>
-          <a href="" class="download__link">
-            <img src="img/app__store--big.png" alt="кнопка для скачикая с App store">
-            <span class="visually-hidden">Download our app from App Store</span>
-          </a>
+        <div class="app__box">
+          <h2 class="visually-hidden">About our app</h2>
+          <p class="app__title">
+            Download App Now
+          </p>
+          <p class="app__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae,
+            nullam
+            lobortis enim.
+          </p>
+          <div class="app__download download">
+            <a href="" class="download__link">
+              <img src="img/google__play--big.jpg" alt="кнопка для скачивания с Google Play">
+              <span class="visually-hidden">Download our app from Google Play</span>
+            </a>
+            <a href="" class="download__link">
+              <img src="img/app__store--big.png" alt="кнопка для скачикая с App store">
+              <span class="visually-hidden">Download our app from App Store</span>
+            </a>
 
+          </div>
+
+          <ul class="app__list">
+            <li class="app__item">
+              <img class="app__img" src="img/comment.svg" alt="значок скачивания">
+              <p class="app__number">
+                59865
+              </p>
+              <h3 class="app__info">
+                Download
+              </h3>
+            </li>
+
+            <li class="app__item">
+              <img class="app__img" src="img/like.svg" alt="значок лайка">
+              <p class="app__number">
+                29852
+              </p>
+              <h3 class="app__info">
+                Like
+              </h3>
+            </li>
+
+            <li class="app__item">
+              <img class="app__img" src="img/star.svg" alt="звёздочка">
+              <p class="app__number">
+                1500
+              </p>
+              <h3 class="app__info">
+                5 star rating
+              </h3>
+            </li>
+          </ul>
         </div>
-
-        <ul class="app__list">
-          <li class="app__item">
-            <img class="app__img" src="img/comment.svg" alt="значок скачивания">
-            <p class="app__number">
-              59865
-            </p>
-            <h3 class="app__info">
-              Download
-            </h3>
-          </li>
-
-          <li class="app__item">
-            <img class="app__img" src="img/like.svg" alt="значок лайка">
-            <p class="app__number">
-              29852
-            </p>
-            <h3 class="app__info">
-              Like
-            </h3>
-          </li>
-
-          <li class="app__item">
-            <img class="app__img" src="img/star.svg" alt="звёздочка">
-            <p class="app__number">
-              1500
-            </p>
-            <h3 class="app__info">
-              5 star rating
-            </h3>
-          </li>
-        </ul>
-
 
         <img class="app__img app__img--big" src="img/app__img--big.png" alt="дизайн старницы по аналитике">
 
