--- a/index.html
+++ b/index.html
@@ -10,20 +10,25 @@
 </head>
 
 <body>
+
   <header class="header">
+              <a class="skip-link" href="#main">
+                go to content
+              </a>
     <div class="header__wrapper">
+
       <button class="header__burger burger">
         <!-- <img class="burger__img" src="#" alt="бургер меню"> -->
         <span></span>
       </button>
       <nav class="header__nav nav">
-        <a href="" class="nav__item">
+        <a href="#" class="nav__item">
           Home
         </a>
-        <a href="" class="nav__item">
+        <a href="#about" class="nav__item">
           About
         </a>
-        <a href="" class="nav__item">
+        <a href="#features" class="nav__item">
           Features
         </a>
       </nav>
@@ -31,13 +36,13 @@
         <img class="logo__img" src="img/logo.jpg" alt="логотип компании">
       </a>
       <nav class="header__nav nav">
-        <a href="" class="nav__item">
+        <a href="#how-to-use" class="nav__item">
           Screenshot
         </a>
-        <a href="" class="nav__item">
+        <a href="#blog" class="nav__item">
           Blog
         </a>
-        <a href="#" class="nav__item nav__item_background">DOWNLOAD</a>
+        <a href="#app" class="nav__item nav__item_background">DOWNLOAD</a>
       </nav>
       <a href="#" class="header__download">DOWNLOAD</a>
       <div class="header__box box">
@@ -74,7 +79,7 @@
       </div>
     </div>
   </header>
-  <main class="main">
+  <main class="main" id="main">
     <h1 class="visually-hidden">Applly - app that makes your life better</h1>
     <section class="main__info info">
       <div class="info__wrapper">
@@ -113,7 +118,7 @@
         <img src="img/info__mobile.png" class="info__example" alt="прототип внешнего вида приложения">
       </div>
     </section>
-    <section class="main__about about">
+    <section class="main__about about" id="about">
       <div class="about__wrapper">
         <h2 class="about__title">
           About Our App
@@ -150,7 +155,7 @@
       </div>
 
     </section>
-    <section class="main__features features">
+    <section class="main__features features" id="features">
       <div class="features__wrapper">
         <h2 class="features__title features__title--big">
           App features
@@ -236,7 +241,7 @@
       </div>
 
     </section>
-    <section class="main__app app">
+    <section class="main__app app" id="app">
 
       <div class="app__wrapper">
         <div class="app__box">
@@ -299,7 +304,7 @@
       </div>
 
     </section>
-    <section class="main__how-to-use how-to-use">
+    <section class="main__how-to-use how-to-use" id="how-to-use">
       <div class="how-to-use__wrapper">
         <h2 class="how-to-use__title title">
           how to use the app perfectly
@@ -311,7 +316,7 @@
         <img class="how-to-use__video" src="img/how-to-use.jpg" alt="">
       </div>
     </section>
-    <section class="main__rewiev rewiev">
+    <section class="main__rewiev rewiev" id="rewiev">
       <div class="rewiev__wrapper">
         <h2 class="rewiev__title">
           Our Happy Cutomar
@@ -407,7 +412,7 @@
       </div>
 
     </section>
-    <section class="main__blog blog">
+    <section class="main__blog blog" id="blog">
 
       <div class="blog__wrapper">
         <h2 class="blog__title">Our recent blog</h2>
@@ -473,7 +478,7 @@
       </div>
     </section>
 
-    <section class="main__contacts contacts">
+    <section class="main__contacts contacts" id="contacts">
       <h2 class="visually-hidden">Our contacts</h2>
 
       <a href="mailto:info.design@gmail.com" class="contacts__link">
