--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
   <header class="header">
-              <a class="skip-link" href="#main">
-                go to content
-              </a>
+    <a class="skip-link" href="#main">
+      go to content
+    </a>
     <div class="header__wrapper">
 
       <button class="header__burger burger">
@@ -539,8 +539,8 @@
           quick link
         </h3>
         <ul class="links__list">
-          <li class="links__item"><a href="#" class="links__link">About</a></li>
-          <li class="links__item"><a href="#" class="links__link">Features</a></li>
+          <li class="links__item"><a href="demo.html" class="links__link">Demo</a></li>
+          <li class="links__item"><a href="form.html" class="links__link">Form</a></li>
           <li class="links__item"><a href="#" class="links__link">Screenshot</a></li>
           <li class="links__item"><a href="#" class="links__link">articles</a></li>
         </ul>
