--- a/demo.html
+++ b/demo.html
@@ -45,7 +45,7 @@
           <img src="img/mail-fill.svg" alt="письмо" class="box__img">
           <span class="box__text">info@youremail.com</span>
         </a>
-        <a href="tel:(480) 555-0103" class="box__link">
+        <a href="tel:4805550103" class="box__link">
           <img src="img/phone-fill.svg" alt="телефон" class="box__img">
           <span class="box__text">(480) 555-0103</span>
         </a>
