--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <img src="img/mail-fill.svg" alt="письмо" class="box__img">
           <span class="box__text">info@youremail.com</span>
         </a>
-        <a href="tel:(480) 555-0103" class="box__link">
+        <a href="tel:4805550103" class="box__link">
           <img src="img/phone-fill.svg" alt="телефон" class="box__img">
           <span class="box__text">(480) 555-0103</span>
         </a>
@@ -216,7 +216,7 @@
 
           <li class="features__item">
 
-            <img class="features__img" src="img/eye-scanner 1.svg" alt="картинка сообщения">
+            <img class="features__img" src="img/eye-scanner_1.svg" alt="картинка сообщения">
 
             <h3 class="features__title">
               retina ready greaphics
@@ -483,14 +483,14 @@
 
       <a href="mailto:info.design@gmail.com" class="contacts__link">
         <img class="contacts__img" src="img/contacts__email.svg" alt="значок gmail">
-        <span href="mailto:info.design@gmail.com" class="contacts__text">info.design@gmail.com</span>
+        <span class="contacts__text">info.design@gmail.com</span>
       </a>
 
 
 
       <a href="tel:+8803216559985" class="contacts__link">
         <img class="contacts__img" src="img/contacts__call.svg" alt="значок gmail">
-        <span href="tel:+8803216559985" class="contacts__text">+880 321 655 9985</span>
+        <span class="contacts__text">+880 321 655 9985</span>
       </a>
 
 
@@ -541,7 +541,7 @@
         <ul class="links__list">
           <li class="links__item"><a href="demo.html" class="links__link">Demo</a></li>
           <li class="links__item"><a href="form.html" class="links__link">Form</a></li>
-          <li class="links__item"><a href="#" class="links__link">Screenshot</a></li>
+          <li class="links__item"><a href="grid.html" class="links__link">Grid</a></li>
           <li class="links__item"><a href="#" class="links__link">articles</a></li>
         </ul>
       </div>
@@ -555,6 +555,7 @@
         </p>
         <form action="#" method="post" class="news__form">
           <label class="news__label">
+            <p class="visually-hidden">email</p>
             <input class="news__input-text" type="email" name="mail" value="" placeholder="Your email address">
           </label>
           <button class="news__button" type="submit">
